frontend/src/app/globals.css
@import "tailwindcss";

@theme {
  --color-coral: #ff6f59;
  --color-dark-slate: #254441;
  --color-seagrass: #43aa8b;
  --color-muted-teal: #7bad93;
  --color-dry-sage: #b2b09b;
  --color-watermelon: #ef3054;
}

body {
  background-color: white;
}

